src/objects/c2g__codaIntercompanyDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintercompanydefinition</customHelpPage>
    <description>Defines the intercompany control accounts that you want to use when generating and posting  intercompany journals.</description>
    <fields>
        <fullName>c2g__AutoPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AutoProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReceivingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Payable GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Accounts Payable GLA)</relationshipLabel>
        <relationshipName>Intercompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RelatedCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Related Company)</relationshipLabel>
        <relationshipName>IntercompanyDefinitionsRelatedCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SendingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Receivable GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Accounts Receivable GLA)</relationshipLabel>
        <relationshipName>Intercompany1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Definition</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ICD{000000}</displayFormat>
        <label>Intercompany Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>